//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table List {
  id String [pk]
  userId String [unique, not null]
  firstName String
  lastName String
  wishes Wish [not null]
  ideasForOthers Wish [not null]
  receivedMessages Message [not null]
  sentMessages Message [not null]
  gifts Gifter [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table Wish {
  id String [pk]
  recipientId String [not null]
  title String [not null]
  description String
  image String
  link String
  price Int
  addedBy String [not null]
  order Int [not null]
  giftedBy Gifter [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  recipientList List [not null]
  addedByList List [not null]
}

Table Gifter {
  id String [pk]
  wishId String [not null]
  gifterId String [not null]
  amount Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  wish Wish [not null]
  gifterList List [not null]

  indexes {
    (wishId, gifterId) [unique]
  }
}

Table Message {
  id String [pk]
  recipientId String [not null]
  authorId String [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  recipientList List [not null]
  authorList List [not null]
}

Enum Role {
  ADMIN
  USER
}

Ref: Wish.recipientId > List.userId

Ref: Wish.addedBy > List.userId

Ref: Gifter.wishId > Wish.id

Ref: Gifter.gifterId > List.userId

Ref: Message.recipientId > List.userId

Ref: Message.authorId > List.userId